--- a/src/App.css
+++ b/src/App.css
@@ -42,15 +42,16 @@
   font-size: 0.50em;
   margin: 20px 0 10px;
 }
-.options div:first-child {
-  border-right: 1px solid lightgray;
-}
-.options div i {
-  margin-left: 10px;
+i.icon {
+  margin: 0 10px !important;
 }
 .choice {
-  padding: 0.5em 0;
+  padding: 0.25em 0;
   cursor: pointer;
+  border-bottom: 1px solid #c0cacd;
+}
+.choice:last-child {
+  border-bottom: none;
 }
 .daily-fcast {
   padding: 10px 20px;
