--- a/src/App.css
+++ b/src/App.css
@@ -48,10 +48,7 @@ i.icon {
 .choice {
   padding: 0.25em 0;
   cursor: pointer;
-  border-bottom: 1px solid #c0cacd;
-}
-.choice:last-child {
-  border-bottom: none;
+  border-top: 1px solid #c0cacd;
 }
 .daily-fcast {
   padding: 10px 20px;
