--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,23 @@
   width: 400px !important;
   background: rgb(255, 255, 255, 0.5) !important;
 }
+#header h1 {
+  font-size: 2.5em;
+}
+#header h4 {
+  font-size: 1.25em;
+}
+#city-input {
+  width: 12.5em;
+  font-size: 1.5em;
+  border-radius: 0.25em;
+}
+#city-submit {
+  vertical-align: top;
+  margin-left: 0.5em;
+  padding: 0.5em 1.25em;
+  background: #d3d3d3;
+}
 #temperature {
   margin: 10px 0;
   font-size: 2em;
