--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,11 @@
 i.icon {
   margin: 0 10px !important;
 }
+.options {
+  display: flex;
+  flex-direction: column;
+  font-size: 0.75em;
+}
 .choice {
   padding: 0.25em 0;
   cursor: pointer;
