--- a/src/App.css
+++ b/src/App.css
@@ -27,16 +27,30 @@
 #header h4 {
   font-size: 1.25em;
 }
+#search-page-body {
+  height: 100% !important;
+  background: linear-gradient(blue, yellow);
+}
 #city-input {
   width: 12.5em;
   font-size: 1.5em;
   border-radius: 0.25em;
+}
+.city-choice {
+  cursor: pointer;
+  font-size: 0.75em;
+}
+.city-choice:hover {
+  background-color: #a5a5a5;
 }
 #city-submit {
   vertical-align: top;
   margin-left: 0.5em;
   padding: 0.5em 1.25em;
   background: #d3d3d3;
+}
+#weather-body {
+  height: 100% !important;
 }
 #temperature {
   margin: 10px 0;
@@ -71,6 +85,9 @@ i.icon {
   padding: 0.25em 0;
   cursor: pointer;
   border-top: 1px solid #c0cacd;
+}
+#hourly-and-daily {
+  height: fit-content !important;
 }
 .daily-fcast, .hourly-fcast {
   padding: 10px 20px;
