--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,11 @@
   width: 400px !important;
   background: rgb(255, 255, 255, 0.5) !important;
 }
+.heading {
+  display: flex;
+  justify-content: space-between;
+  padding: 1em 2em !important;
+}
 #header h1 {
   font-size: 2.5em;
 }
