--- a/src/index.css
+++ b/src/index.css
@@ -75,7 +75,7 @@ table, th, td {
   border-top: transparent;
   border-right: transparent;
   border-collapse: collapse;
-  padding: 0.25em;
+  padding: 0.5em 0.25em;
 }
 
 table {
