Small UI update + code revisions

--- a/src/App.css
+++ b/src/App.css
@@ -114,13 +114,10 @@ i.icon {
 }
 .daily-fcast, .hourly-fcast {
   /* padding: 0.25em; */
-  border-bottom: 5px solid #a09f9f;
-}
-.new-day, .hourly-fcast {
-  transition: opacity 0.5s ease-in-out;
-}
-.daily-fcast:first-of-type, .hourly-fcast:first-of-type {
   border-top: 5px solid #a09f9f;
+}
+.hourly-fcast:nth-of-type(12) {
+  border-bottom: 5px solid #a09f9f;
 }
 .new-day {
   font-weight: bold;
