--- a/src/App.css
+++ b/src/App.css
@@ -150,6 +150,16 @@ i.angle {
 .active {
   transform: rotate(90deg);
 }
+.forecast-12hr {
+  display: grid;
+  grid-template-columns: 1fr 1fr 30% 30%;
+}
+.weather-icon-12hr {
+  width: 4em;
+}
+.downsize {
+  font-size: 0.75em;
+}
 .weather-info {
   display: grid;
   grid-template-columns: 1.5em 1fr 1fr 1fr 45%;
