--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
 }
 .ui.card {
   width: 400px !important;
-  background: rgb(255, 255, 255, 0.5) !important;
+  background: rgb(255, 255, 255, 0.7) !important;
 }
 .heading {
   display: flex;
@@ -66,6 +66,11 @@
 }
 .content.heading::after {
   display: none !important;
+}
+#weather-body {
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 #main-weather {
   display: grid;
